add afterparty to the last day on schedule

--- a/templates/index.html
+++ b/templates/index.html
@@ -546,7 +546,12 @@
               <h4>{{ schedule.section3 }}</h4>
             </div>
           </li>
-          <li></li>
+          <li>
+            <time>19:00</time>
+            <div>
+              <h4>{{ schedule.section6 }}</h4>
+            </div>
+          </li>
           <li></li>
         </ul>
       </div>
