update speaker's info

--- a/templates/index.html
+++ b/templates/index.html
@@ -239,7 +239,7 @@
         </a>
         </div>
       </li>
-      <li>
+      <!--       <li>
         <a href='{{ speakers.speaker17.url }}' target='new'>
           <img src='/images/speakers/17.jpg' />
           <div class='cover'>
@@ -249,7 +249,7 @@
             </div>
         </a>
         </div>
-      </li>
+      </li> -->
       <li>
         <a href='{{ speakers.speaker18.url }}' target='new'>
           <img src='/images/speakers/18.jpg' />
@@ -272,9 +272,9 @@
         </a>
         </div>
       </li>
-      <!--       <li>
+      <li>
         <a href='{{ speakers.speaker20.url }}' target='new'>
-          <img src='/images/speakers/0.jpg' />
+          <img src='/images/speakers/20.jpg' />
           <div class='cover'>
             <div class='info'>
               <h4>{{ speakers.speaker20.name }}</h4>
@@ -282,7 +282,7 @@
             </div>
         </a>
         </div>
-      </li> -->
+      </li>
       <li>
         <a href='{{ speakers.speaker21.url }}' target='new'>
           <img src='/images/speakers/21.jpg' />
@@ -352,7 +352,12 @@
               <p>{{ speakers.speaker21.name }}</p>
             </div>
           </li>
-          <li></li>
+          <li>
+            <time>12:00</time>
+            <div>
+              <h4>{{ schedule.section7 }}</h4>
+            </div>
+          </li>
           <li>
             <time>13:30</time>
             <div>
@@ -479,7 +484,12 @@
               <p>{{ speakers.speaker8.name }}</p>
             </div>
           </li>
-          <li></li>
+          <li>
+            <time>12:00</time>
+            <div>
+              <h4>{{ schedule.section7 }}</h4>
+            </div>
+          </li>
           <li>
             <time>13:30</time>
             <div>
@@ -503,7 +513,7 @@
           <li>
             <time>14:50</time>
             <div>
-              <h4>{{ schedule.section5 }} </h4>
+              <h4>{{ schedule.section5 }}</h4>
             </div>
           </li>
           <li>
