--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1072,10 +1072,11 @@ input:not([type=submit]), textarea {
                 }
                 p {
                   color: #999;
-                  @include font-size($smaller);
+                  @include font-size($normal);
+                  margin: $gutter/4 0 0;
                 }
-                h4,
-                p {
+                h4
+                {
                   margin: 0px;
                 }
                 a {
