add oshk to media partner list

--- a/templates/index.html
+++ b/templates/index.html
@@ -585,7 +585,7 @@
           <a href='http://www.qiniu.com/' target='new'><img src='/images/sponsors/qiniu.png' width='230' /></a>
           <a href='http://careers.ef.com/cn/categories/technology/' target='new'><img src='/images/sponsors/ef.png' width='140' /></a><br/>
           <a href='https://www.splunk.com/' target='new'><img src='/images/sponsors/splunk.png' width='170' /></a>
-          <a href='http://www.ucloud.cn/' target='new'><img src='/images/sponsors/ucloud.png' width='170' /></a><br/>
+          <a href='http://www.ucloud.cn/' target='new'><img src='/images/sponsors/ucloud.png?' width='170' /></a><br/>
           <a href='https://www.teambition.com/' target='new' class="c-type"><img src='/images/sponsors/teambition.png' width='160' /></a>
           <a href='http://www.upyun.com/' target='new' class="c-type"><img src='/images/sponsors/upyun.png' width='150' /></a>
           <a href='https://bearychat.com/' target='new' class="c-type"><img src='/images/sponsors/bearyinnovative.png' height='90' /></a>
@@ -600,7 +600,8 @@
           <a href='http://www.broadview.com.cn/' target='new'><img src='/images/sponsors/broadview.png' width='150' /></a>
           <a href='https://cnodejs.org/' target='new'><img src='/images/sponsors/cnode.png' width='150' /></a>
           <a href='http://www.ptpress.com.cn/default.aspx' target='new'><img src='/images/sponsors/ptpress.png' width='150' /></a>
-          <a href='https://www.oneapm.com/' target='new'><img src='/images/sponsors/oneapm.png' width='80' /></a>
+          <a href='https://www.oneapm.com/' target='new'><img src='/images/sponsors/oneapm.png' width='75' /></a>
+          <a href='http://opensource.hk' target='new'><img src='/images/sponsors/oshk.png' width='150' /></a>
         </div>
         <h3>{{ menu.item4.section4 }}</h3>
         <div class='supporter'>
