--- a/templates/partials/_head.html
+++ b/templates/partials/_head.html
@@ -12,4 +12,5 @@
 
   <!-- CSS -->
   <link href='/assets/styles.css?v=20150605' rel='stylesheet' type='text/css'/>
+  <script type="text/javascript" src="http://api.map.baidu.com/api?key=&v=1.1&services=true"></script>
 </head>
